@@ -36,10 +36,6 @@
  * Add readline support to the remctl client for multiple commands to the
    same server in the same authenticated session.
 
- * In standalone mode, remctld doesn't shut down cleanly after a signal
-   and in particular doesn't delete its PID file if it was configured to
-   write one.  It should also re-read its configuration file on SIGHUP.
-
  * Add support for external ACL checking programs.  This can be added to
    the existing ACL file syntax without too much trouble, perhaps with a
    program keyword that works similarly to the include keyword.  If the
